--- a/ChessGame/_css/styles.css
+++ b/ChessGame/_css/styles.css
@@ -39,7 +39,7 @@ span[id*=p-]{
 
 .color-path{
     border: 2px solid #7c8bc4;
-    background-color: yellow !important;
+    background-color: rgb(89, 255, 0) !important;
 }
 
 .kill-cell-color{
