--- a/ChessGame/_css/styles.css
+++ b/ChessGame/_css/styles.css
@@ -38,7 +38,7 @@ span[id*=p-]{
 }
 
 .color-path{
-    border: 2px solid #7c8bc4;
+    border: 2px solid #ffffff;
     background-color: rgb(0, 106, 255) !important;
 }
 
